--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
+.env
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log*git
 pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.env
 dist
 dist-ssr
 *.local
